--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,12 @@ repository: https://github.com/moovida/dart_jts
 issue_tracker: https://github.com/moovida/dart_jts/issues
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.19.5 <3.0.0'
 
 dependencies:
-  intl: '>=0.16.1 <=0.18.0'
-  collection: '>=1.14.13 <=1.17.1'
+  intl:
+  collection:
 
 dev_dependencies:
-  pedantic: ^1.9.0
-  test: ^1.14.2
+  pedantic: 
+  test: 
